--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.21",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.29.3"
+    "sequelize": "^6.29.3",
+    "uuid": "^9.0.0"
   }
 }
