--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.3.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.21",
+    "pdfjs-dist": "^3.7.107",
     "pg": "^8.10.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.3",
