--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.1",
+    "nodemailer": "0.7.1",
     "nodemon": "^2.0.21",
     "pdfjs-dist": "^3.7.107",
     "pg": "^8.10.0",
